--- a/access/src/main/external/static/css/cdr_admin.css
+++ b/access/src/main/external/static/css/cdr_admin.css
@@ -2638,6 +2638,7 @@ h1 {
 	position: absolute;
 	width: calc(100vw - 360px);
 	top: 0;
+	z-index: 50;
 }
 
 .container_title {
@@ -2869,6 +2870,7 @@ h1 {
 	width: calc(100vw - 360px);
 	position: absolute;
 	top: 58px;
+	z-index: 51;
 }
 
 .with_path .result_table .column_headers {
